fix: fixes icon alignment and size

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -45,6 +45,12 @@
   font-weight: 700;
 }
 
+.btn-icon {
+  width: 13px;
+  height: 13px;
+  margin-top: 2.5px;
+}
+
 @media (max-width: 1064px) {
   .home-section {
     grid-template-columns: 1fr;
